Scrollbar fixed

--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,13 @@
   color: #888;
 }
 
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  /* IE/Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
