--- a/src/index.css
+++ b/src/index.css
@@ -282,3 +282,17 @@ input[type=number] {
   -moz-appearance: textfield;
   appearance: textfield;
 }
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari and Opera */
+}
+
+
